Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
There is a typo in ExtensionSet::Make() that causes a crash whenever somebody provides an unsupported function into the Substrait consumer. It looks like this was a copy/paste error here where type_ids should be function_ids.
To reproduce via the R bindings:
arrow:::do_exec_plan_substrait(' { "extensionUris": [ { "extensionUriAnchor": 1 } ], "extensions": [ { "extensionFunction": { "extensionUriReference": 1, "functionAnchor": 2, "name": "abs_checked" } } ], "relations": [ { "rel": { "project": { "input": { "read": { "baseSchema": { "names": [ "letter", "number" ], "struct": { "types": [ { "string": { } }, { "i32": { } } ] } }, "namedTable": { "names": [ "named_table_1" ] } } }, "expressions": [ { "scalarFunction": { "functionReference": 2, "args": [ { "selection": { "directReference": { "structField": { "field": 1 } } } } ], "outputType": { } } } ] } } } ] } ')
Attachments
Issue Links
- links to